--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!doctype html>
+<html>
+	<head>
+		<!-- Paramètrage / options du site -->
+		<meta charset="utf-8">
+		<title>Lilasena</title>
+		<link rel="stylesheet" href="styleHP.css" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+<style>
 body{
 	background: #dddddd;
+	font-size:60px;
+	border:10p;
+	width:100%;
 }
+</style>
+
+
+	</head>
+	<body>
+			<div id="container">Initiation GITHUB</div>
+	</body>
+	</html>
