maj projet isa cmd

--- a/index.html
+++ b/index.html
@@ -3,23 +3,69 @@
 	<head>
 		<!-- Paramètrage / options du site -->
 		<meta charset="utf-8">
-		<title>Lilasena</title>
-		<link rel="stylesheet" href="styleHP.css" type="text/css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
-<style>
-body{
-	background: #dddddd;
-	padding: 0;
-	margin-left: 12px;
-	font-size:60px;
-	border:10p;
-	width:100%;
-}
-</style>
-
-
+		<title>Commande GITHUB</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:200" rel="stylesheet">
 	</head>
 	<body>
-			<div id="container">Initiation GITHUB</div>
+		<div class="r"><img src="images/install.jpg" alt="alert"><img src="images/conflit.png" alt="alert"></div>
+		<div id="container">
+			<h1>INITIATION GITHUB</h1>
+			<div id="inst">
+				<h2>Installation</h2>
+				<p>Pour windows : <a href="https://git-for-windows.github.io" target="_blank">https://git-for-windows.github.io</a><br>
+				Télécharger le fichier : <strong><i>Git-2.14.2.3-64-bit.exe</i></strong> et Installer sur C / Programme Files</p>
+				<p>Attention ne pas faire Next sur l'étape "Ajusting your path environment" et choisir la 3<sup>eme</sup> option :</p>
+			</div>
+			<div id="cmd">
+				<h2>Commandes</h2>
+				<p>
+					<span class="n"><a>git_config_</a></span><span class="p"><a>--global_user.email_</a></span><span class="d"><a>"_ _ _ _ _ _"</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_config_</a></span><span class="p"><a>--global_user.name_</a></span><span class="d"><a>"_ _ _ _ _ _"</a></span><span class="t"><a>Pour connecter mon ordi avec mon compte GITHUB</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_status_</a></span><span class="t"><a>Pour lister l'etat </a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_add_</a></span><span class="p"><a>&bull;</a></span><span class="t"><a>Ajoute tous les fichiers to commit</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_add_</a></span><span class="d"><a>.gitignore_README.md</a></span><span class="t"><a>Ajoute ces 2 fichiers dans la liste des fichiers to commit</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_commit_</a></span><span class="p"><a>-m_</a></span><span class="d"><a>"initial_commit"</a></span><span class="t"><a>Pour le premier commit du projet</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_push_</a></span><span class="p"><a>origin_</a></span><span class="d"><a>master</a></span><span class="t"><a>Pour lancer le commit du master</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_branch_</a></span><span class="d"><a>nom-du-fichier</a></span><span class="t"><a>Pour créer une branche et lister celle déjà créées</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_branch_</a></span><span class="d"><a>nom-branche</a></span><span class="t"><a>Pour créer une branche et lister celle déjà créées</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_checkout_</a></span><span class="d"><a>nom-branche</a></span><span class="t"><a>Pour sortir de la branche</a></span>
+				</p>
+				<p>A faire avant tout commit :</p>
+				<p>
+					<span class="n"><a>git_pull_</a></span><span class="p"><a>origin_</a></span><span class="d"><a>master</a></span><span class="t"><a>Pour recharger le projet en local depuis Github</a></span>
+				</p>
+				<p>Recupérer un projet depuis Github :</p>
+				<p>
+					<span class="n"><a>git_clone_</a></span><span class="d"><a>URL recupérée sur Github</a></span><span class="t"><a>Pour copier un projet de Github en Local</a></span>
+				</p>
+				<h2>Commandes DOS</h2>
+				<p><span class="dos"><a>pwd_</a></span><span class="t"><a>Où suis-je</a></span></p>
+				<p><span class="dos"><a>ls_</a></span><span class="t"><a>Lister</a></span></p>
+				<p><span class="dos"><a>cd_</a></span><span class="t"><a>Change Directory</a></span></p>
+				<p><span class="dos"><a>cd_&bull;&bull;</a></span><span class="t"><a>Remonte au Directory au dessus</a></span></p>
+				<p><span class="dos"><a>cd_</a></span><span class="d"><a>+Glissé-déposé du Dossier</a></span><span class="t"><a>Se positionne dans le dossier</a></span></p>
+				<p><span class="dos"><a>mkdir_</a></span><span class="d"><a>nom-du-dossier</a></span><span class="t"><a>Créer le directory</a></span></p>
+				<p><span class="dos"><a>touch_</a></span><span class="d"><a>fichier.ext</a></span><span class="t"><a>Créer le fichier, avec nom + extension</a></span></p>
+			</div>
+		</div>
 	</body>
 	</html>
