--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
 				<p>
 					<span class="n"><a>git_push_</a></span><span class="p"><a>origin_</a></span><span class="d"><a>master</a></span><span class="t"><a>Pour lancer le commit du master</a></span>
 				</p>
+				<h3>En cas d'erreur type "behind 12 commit" :</h3>
+				<p>
+					<span class="n"><a>git_stash_</a></span><span class="t"><a>Sur le master pour remiser le code</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_pull_</a></span><span class="p"><a>origin_</a></span><span class="d"><a>master</a></span><span class="t"><a>Juste après</a></span>
+				</p>
+				<p>
+					<span class="n"><a>git_push_</a></span><span class="p"><a>origin_</a></span><span class="d"><a>master</a></span><span class="t"><a>Et ensuite pour actualiser GITHUB</a></span>
+				</p>
 
 				<h2>Commandes DOS</h2>
 				<p><span class="dos"><a>pwd_</a></span><span class="t"><a>Où suis-je</a></span></p>
@@ -97,6 +107,8 @@
 				<p><span class="dos"><a>mkdir_</a></span><span class="d"><a>nom-du-dossier</a></span><span class="t"><a>Créer le directory</a></span></p>
 				<p><span class="dos"><a>touch_</a></span><span class="d"><a>fichier.ext</a></span><span class="t"><a>Créer le fichier, avec nom + extension</a></span></p>
 				<p><span class="dos"><a>exit</a></span><span class="t"><a>Pour quitter la console</a></span></p>
+				<p><span class="dos"><a>:q!</a></span><span class="t"><a>Pour quitter l'éditeur</a></span></p>
+				<p><span class="dos"><a>CTRL + C</a></span><span class="t"><a>Pour quitter l'éditeur</a></span></p>
 			</div>
 		</div>
 	</body>
